fix overflow issues in editor panels

--- a/timesite/backend/static/style.css
+++ b/timesite/backend/static/style.css
@@ -157,6 +157,7 @@ a {
 }
 .underlying-container {
     height: 90vh;
+    overflow-x: hidden;
     overflow-y: auto;
 }
 .underlying-container.half {
